fix(bug): aligned bio content to top, added short story category

--- a/src/app/reusable/bio/bio.component.scss
+++ b/src/app/reusable/bio/bio.component.scss
@@ -35,7 +35,7 @@
         grid-row: bio-content-start/bio-content-end;
         white-space: pre-line;
         overflow-y: auto;
-        align-self: center;
+        align-self: start;
         max-height: 100%;
       }
     }
